# H-Calc

./: H-Calc.cabal  LICENSE  README.md  TODO.md  stack.yaml
sandbox/: Main.hs  Parser.hs  Prelude.hs  Sandbox.hs
src/: A_Add.hs  A_Error.hs  B_Add.hs  B_Mul.hs  C_Float.hs  C_Mul.hs  D_Float.hs  Main.hs  Prelude.hs  Result.hs  Utils.hs
src/Interpreter/: A_Annotation.hs  A_Nucleus.hs  A_Type.hs  A_TypeCheck.hs  B_Add.hs  C_Mul.hs  D_Float.hs  EADT.md  Interpreter.hs  README.md  Result.hs  Transfos.hs  Utils.hs
test/Interpreter/: A_NucleusSpec.hs  A_TypeCheckSpec.hs  A_TypeSpec.hs  B_AddSpec.hs  C_MulSpec.hs  D_FloatSpec.hs  InterpreterSpec.hs  ResultSpec.hs  TransfosSpec.hs  UtilsSpec.hs
