name:                H-Calc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/H-IDP#readme
license:             BSD3
license-file:        LICENSE
author:              Pierre Carbonnelle
maintainer:          pierre.Carbonnelle@gmail.com
copyright:           2018 Pierre Carbonnelle
category:            Compiler
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable H-Calc
  hs-source-dirs:     src
  main-is:            main.hs
  default-language:   Haskell2010
  build-depends:      base-noprelude >= 4.7 && < 5
                    , haskus-utils-variant
                    , hspec ==2.*
                    , megaparsec
                    , parser-combinators
                    , recursion-schemes
                    , relude
  default-extensions: ConstraintKinds
                    , DataKinds
                    , DeriveFunctor
                    , FlexibleContexts
                    , FlexibleInstances
                    , GADTs
                    , KindSignatures
                    , LambdaCase
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , OverloadedStrings
                    , PatternSynonyms
                    , TypeApplications
                    , TypeOperators
                    , UndecidableInstances

test-suite spec
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test
  build-depends:      base ==4.*
                    , hspec ==2.*
  other-modules:
                      Data.String.StripSpec
                      Paths_strip
  default-language:   Haskell2010
  build-tool-depends: hspec-discover:hspec-discover == 2.*        
