name:                H-Calc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/H-IDP#readme
license:             BSD3
license-file:        LICENSE
author:              Pierre Carbonnelle
maintainer:          pierre.Carbonnelle@gmail.com
copyright:           2018 Pierre Carbonnelle
category:            Compiler
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:     src
  build-depends:      base-noprelude >= 4.7 && < 5
                    , haskus-utils-variant >= 2.0.1
                    , hspec ==2.*
                    , megaparsec
                    , parser-combinators
                    , recursion-schemes
                    , relude
  exposed-modules:    Interpreter.A_TypeCheck
                    , Interpreter.B_Add
                    , Interpreter.C_Mul
                    , Interpreter.D_Float
                    , Interpreter.Interpreter
                    , Interpreter.Result
                    , Interpreter.Utils
                    , Prelude
  default-language:   Haskell2010
  default-extensions: ConstraintKinds
                    , DataKinds
                    , DeriveFunctor
                    , FlexibleContexts
                    , FlexibleInstances
                    , GADTs
                    , KindSignatures
                    , LambdaCase
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , OverloadedStrings
                    , PatternSynonyms
                    , TemplateHaskell
                    , TypeApplications
                    , TypeOperators
                    , UndecidableInstances

executable H-Calc
  hs-source-dirs:     src
  main-is:            main.hs
  build-depends:      base-noprelude >= 4.7 && < 5
                    , haskus-utils-variant >= 2.0.1
                    , hspec ==2.*
                    , megaparsec
                    , parser-combinators
                    , recursion-schemes
                    , relude
  other-modules:      Interpreter.A_TypeCheck
                    , Interpreter.B_Add
                    , Interpreter.C_Mul
                    , Interpreter.D_Float
                    , Interpreter.Interpreter
                    , Interpreter.Result
                    , Interpreter.Utils
                    , Prelude
  default-language:   Haskell2010
  default-extensions: ConstraintKinds
                    , DataKinds
                    , DeriveFunctor
                    , FlexibleContexts
                    , FlexibleInstances
                    , GADTs
                    , KindSignatures
                    , LambdaCase
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , OverloadedStrings
                    , PatternSynonyms
                    , TemplateHaskell
                    , TypeApplications
                    , TypeOperators
                    , UndecidableInstances

test-suite spec
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test
  build-depends:      base-noprelude >= 4.7 && < 5
                    , haskus-utils-variant >= 2.0.1
                    , hspec ==2.*
                    , megaparsec
                    , parser-combinators
                    , recursion-schemes
                    , relude
                    , H-Calc
  other-modules:      Interpreter.A_TypeCheckSpec
                    , Interpreter.B_AddSpec
                    , Interpreter.C_MulSpec
                    , Interpreter.D_FloatSpec
                    , Interpreter.InterpreterSpec
                    , Interpreter.ResultSpec
                    , Interpreter.UtilsSpec      
  default-language:   Haskell2010      
  build-tool-depends: hspec-discover:hspec-discover == 2.*
